Added a few more projects and added icons to my contact info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,20 +35,30 @@ article {
     margin-bottom: 100px; 
 }
 
+i {
+    font-size: 24px;
+}
+
 /* Card styling */
 .card-style {
-    margin: 10px 10px;
+    margin: 20px 20px 20px;;
     float: left;
     border-radius: 5px;
 }
 
+/* .opacity {
+    opacity: 95%;
+} */
 /* Easy to change text color */
 .text-color {
     color: #D2D3D3;
 }
 /* Easy to change background color */
 .bkgd-color {
-    background-color: #2D3032;
+    background: rgba(45, 48, 50, 0.8);
+    /* background-color: #2D3032; */
+    /* opacity: 95%; */
+    
 }
 
 .contact-info {
