--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,10 +102,10 @@ i {
 .portfolio {
     float: left;
     margin: 5px 25px 50px 0px;
-    max-width: 100%;
-    max-height: 100%;
-    /* border: 2px solid #0299df; */
+    width: 100%;
+    height: 500px;
     border-radius: 20px;
+    object-fit: cover;
 }
 /* Titles for my projects */
 .project-title {
